# Cabana

./: .clang-format  .codecov.yml  .ecp-gitlab-ci.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .jenkins  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CITATION.bib  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  LICENSE  PackagesList.cmake  ProjectName.cmake  README-cabana-beatnik.md  README.md  TPLsList.cmake  Version.cmake  deploy.enc  index.html  run_cmake.sh
benchmark/cajita/: CMakeLists.txt  Cajita_DynamicPartitionerPerformance.cpp  Cajita_FastFourierTransformPerformance.cpp  Cajita_HaloPerformance.cpp  Cajita_InterpolationPerformance.cpp  Cajita_ParticleDynamicPartitionerPerformance.cpp  Cajita_SparseMapDynamicPartitionerPerformance.cpp  Cajita_SparseMapPerformance.cpp  Cajita_SparsePartitionerPerformance.cpp
benchmark/core/: CMakeLists.txt  Cabana_BinSortPerformance.cpp  Cabana_CommPerformance.cpp  Cabana_LinkedCellPerformance.cpp  Cabana_NeighborArborXPerformance.cpp  Cabana_NeighborVerletPerformance.cpp
benchmark/grid/: CMakeLists.txt  Cabana_Grid_FastFourierTransformPerformance.cpp  Cabana_Grid_HaloPerformance.cpp  Cabana_Grid_InterpolationPerformance.cpp  Cabana_Grid_SparseMapPerformance.cpp  Cabana_Grid_SparsePartitionerPerformance.cpp
cajita/src/: CMakeLists.txt  Cabana_Grid.hpp  Cabana_Grid_BovWriter.hpp  Cabana_Grid_FastFourierTransform.hpp  Cabana_Grid_GlobalMesh.hpp  Cabana_Grid_Halo.hpp  Cabana_Grid_HypreStructuredSolver.hpp  Cabana_Grid_Interpolation.hpp  Cabana_Grid_LoadBalancer.hpp  Cabana_Grid_LocalGrid.hpp  Cabana_Grid_LocalMesh.hpp  Cabana_Grid_MpiTraits.hpp  Cabana_Grid_Parallel.hpp  Cabana_Grid_ParticleGridDistributor.hpp  Cabana_Grid_ParticleInit.hpp  Cabana_Grid_ParticleList.hpp  Cabana_Grid_ReferenceStructuredSolver.hpp  Cabana_Grid_SiloParticleOutput.hpp  Cabana_Grid_SparseArray.hpp  Cabana_Grid_SparseHalo.hpp  Cabana_Grid_SparseIndexSpace.hpp  Cabana_Grid_Splines.hpp  Cajita.hpp  Cajita_Array.hpp  Cajita_BovWriter.hpp  Cajita_Config.hpp.in  Cajita_DynamicPartitioner.hpp  Cajita_FastFourierTransform.hpp  Cajita_GlobalGrid.cpp  Cajita_GlobalGrid.hpp  Cajita_GlobalGrid_impl.hpp  Cajita_GlobalGrid_impl_new.hpp  Cajita_GlobalGrid_new.hpp  Cajita_GlobalGrid_old.hpp  Cajita_GlobalMesh.cpp  Cajita_GlobalMesh.hpp  Cajita_Halo.hpp  Cajita_Hilbert.hpp  Cajita_Hypre.hpp  Cajita_HypreSemiStructuredSolver.hpp  (+36 more)
cajita/unit_test/: CMakeLists.txt  TestCUDA_Category.hpp  TestCUDA_UVM_Category.hpp  TestHIP_Category.hpp  TestOPENMP_Category.hpp  TestSERIAL_Category.hpp  TestTHREADS_Category.hpp  tstArray.hpp  tstArray2d.hpp  tstArray3d.hpp  tstBovWriter.hpp  tstDynamicPartitioner.hpp  tstFastFourierTransform.hpp  tstGlobalGrid.hpp  tstGlobalMesh.hpp  tstHalo.hpp  tstHalo2d.hpp  tstHalo3d.hpp  tstHilbert.hpp  tstHypreSemiStructuredSolver.hpp  tstHypreSemiStructuredSolverMulti.hpp  tstHypreStructuredSolver.hpp  tstHypreStructuredSolver2d.hpp  tstHypreStructuredSolver3d.hpp  tstIndexConversion.hpp  tstIndexSpace.hpp  tstInterpolation.hpp  tstInterpolation2d.hpp  tstInterpolation3d.hpp  tstLoadBalancer.hpp  tstLocalGrid.hpp  tstLocalMesh.hpp  tstLocalMesh2d.hpp  tstLocalMesh3d.hpp  tstParallel.hpp  tstParameterPack.hpp  tstParticleDistributor.hpp  tstParticleDynamicPartitioner.hpp  tstParticleGridDistributor2d.hpp  tstParticleGridDistributor3d.hpp  (+15 more)
cmake/test_harness/: CMakeLists.txt  TestCUDA_Category.hpp  TestCUDA_UVM_Category.hpp  TestHIP_Category.hpp  TestOPENMPTARGET_Category.hpp  TestOPENMP_Category.hpp  TestPTHREAD_Category.hpp  TestSERIAL_Category.hpp  TestSYCL_Category.hpp  TestTHREADS_Category.hpp  mpi_unit_test_main.cpp  setup_gtest.cmake  test_harness.cmake  unit_test_main.cpp
core/: CMakeCache.txt  CMakeLists.txt
core/cmake/: CabanaCore_config.hpp.in  Dependencies.cmake
core/example/: CMakeLists.txt  Cabana_peakflops.cpp  cuda_perf_test.cpp  cuda_uvm_example.cu  md_neighbor_perf_test.cpp  scafacos_example.cpp  serial_example.cpp  strided_example.cpp
core/fortran-example/: CMakeLists.txt  CMakeLists.txt~
core/performance_test/: CMakeLists.txt
core/src/: CMakeLists.txt  CabanaConfig.cmakein  CabanaCore_config.hpp.cmakein  Cabana_AoSoA.hpp  Cabana_BatchedLinearAlgebra.hpp  Cabana_BufferParticle.hpp  Cabana_BufferedAoSoA.hpp  Cabana_BufferedData.hpp  Cabana_BufferedFor.hpp  Cabana_Collector.hpp  Cabana_CommunicationPlan.hpp  Cabana_CommunicationPlanBase.hpp  Cabana_Core.hpp  Cabana_Core_Config.hpp.cmakein  Cabana_Cuda.hpp  Cabana_DeepCopy.hpp  Cabana_Distributor.hpp  Cabana_ExecutionPolicy.hpp  Cabana_Experimental_NeighborList.hpp  Cabana_Fields.hpp  Cabana_GaussianMixtureModel.hpp  (+36 more)
example/: CMakeLists.txt
src/: CMakeLists.txt  Cajita.hpp  Cajita_Array.hpp  Cajita_Block.cpp  Cajita_Block.hpp  Cajita_BovWriter.hpp  Cajita_Config.hpp.in  Cajita_Domain.cpp  Cajita_Domain.hpp  Cajita_FastFourierTransform.hpp  Cajita_GlobalGrid.cpp  Cajita_GlobalGrid.hpp  Cajita_GlobalMesh.cpp  Cajita_GlobalMesh.hpp  Cajita_Halo.hpp  Cajita_HypreStructuredSolver.hpp  Cajita_IndexSpace.cpp  Cajita_IndexSpace.hpp  Cajita_Interpolation.hpp  Cajita_LocalGrid.cpp  Cajita_LocalGrid.hpp  Cajita_LocalMesh.hpp  Cajita_ManualPartitioner.cpp  Cajita_ManualPartitioner.hpp  Cajita_MpiTraits.hpp  Cajita_Partitioner.hpp  Cajita_PointSet.hpp  Cajita_ReferenceStructuredSolver.hpp  Cajita_Splines.hpp  Cajita_StructuredSolver.hpp  Cajita_Types.hpp  Cajita_UniformDimPartitioner.cpp  Cajita_UniformDimPartitioner.hpp  Cajita_Version.cpp  Cajita_Version.hpp  Cajita_Version.hpp.in  Cajita_config.hpp.cmakein
unit_test/: CMakeLists.txt  TestCuda_Category.hpp  TestOPENMP_Category.hpp  TestOpenMP_Category.hpp  TestSERIAL_Category.hpp  TestSerial_Category.hpp  tstArray.hpp  tstBlock.hpp  tstBovWriter.hpp  tstCajitaVersion.cpp  tstFastFourierTransform.hpp  tstGlobalGrid.hpp  tstGlobalMesh.hpp  tstHalo.hpp  tstHypreStructuredSolver.hpp  tstIndexSpace.hpp  tstInterpolation.hpp  tstLocalGrid.hpp  tstLocalMesh.hpp  tstPointSet.hpp  tstReferenceStructuredSolver.hpp  tstSplineEvaluation.hpp  tstSplines.hpp  tstStructuredSolver.hpp  unit_test_main.cpp
(+4165 files in other folders)
