##---------------------------------------------------------------------------##
## File  : core/CMakeLists.txt
##---------------------------------------------------------------------------##
add_subdirectory(src)
add_subdirectory(unit_test)
add_subdirectory(performance_test)
add_subdirectory(example)
add_subdirectory(fortran-example)
##---------------------------------------------------------------------------##
## end of core/CMakeLists.txt
##---------------------------------------------------------------------------##
