##---------------------------------------------------------------------------##
## File  : core/CMakeLists.txt
##---------------------------------------------------------------------------##

add_subdirectory(src)
add_subdirectory(unit_test)
add_subdirectory(performance_test)

##---------------------------------------------------------------------------##
## end of core/CMakeLists.txt
##---------------------------------------------------------------------------##
